hellok8s/.k8s/mysql.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellok8s-mysql-svc
  namespace: hellok8s
  labels:
    app: hellok8s
spec:
  ports:
    - port: 3306
  selector:
    app: hellok8s
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: hellok8s
  labels:
    app: hellok8s
spec:
  selector:
    matchLabels:
      app: hellok8s
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hellok8s
        tier: mysql
    spec:
      containers:
        - image: mysql:8.0
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
